Add '24w13a' sources